# ceceo

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: atom.cpp.A75FB1D77DCB6C7A.idx  atom.hpp.386EAE805220D190.idx  badge.hpp.B5D4D95F6BFA1FC7.idx  behaviour.hpp.FEF3F0C7E1B2883C.idx  conditional.cpp.03E7D3DD06ABF129.idx  conditional.hpp.D5FE81F7DE7D4D98.idx  context.cpp.3C508834742DB6E9.idx  context.hpp.3665512793093F61.idx  definition.cpp.65C869FA95847BB7.idx  definition.hpp.D9D010A9E197C9D1.idx  exceptions.cpp.6A162B64C13CB892.idx  exceptions.hpp.4537A1BD59864C82.idx  interpreter.cpp.902A998E7880678E.idx  interpreter.hpp.2C1F0BD49CBBB184.idx  list.cpp.432BE14D777E0ECA.idx  list.hpp.B841ED28D9F5DC79.idx  literal.hpp.BDA2C3FE85B3C3A8.idx  main.cpp.92ABA89CC6B89980.idx  node.cpp.9C66EEE2A67AB0CA.idx  node.hpp.B4A8925FED4098B5.idx  number.hpp.7CEB41DCBC027120.idx  op.cpp.529AFCB8C60FC1EA.idx  op.hpp.A9A7D830545FBADC.idx  parser.cpp.843C1EF883C862DD.idx  parser.hpp.3E45ACBD988763F8.idx  procedure.cpp.59DCE3F3DD966E2F.idx  procedure.hpp.2E960B9AB875621C.idx  source_range.hpp.A777509F6CC96C50.idx  statement.cpp.213CBD2AD97F22BE.idx  statement.hpp.28FABF66C9977CFF.idx  symbol.hpp.B77500FA80FADA97.idx  token.hpp.A0ED92824077FA23.idx  tokenizer.cpp.074FC89B32974538.idx  tokenizer.hpp.9A6E12424A4C2ED6.idx  variable.cpp.56FCD897066A06F2.idx  variable.hpp.DB2F04209A4D2444.idx
ceceo/: CMakeLists.txt  atom.hpp  badge.hpp  behaviour.hpp  builtin.cpp  builtin.hpp  context.cpp  context.hpp  interpreter.cpp  interpreter.hpp  literal.cpp  main.cpp  number.hpp  parser.cpp  parser.hpp  source_range.hpp  symbol.hpp  syntax_dispatcher.hpp  token.hpp  tokenizer.cpp  tokenizer.hpp
ceceo/ast/: CMakeLists.txt  definition.cpp  list.cpp  list.hpp  literal.hpp  node.cpp  node.hpp  null.hpp  op.cpp  op.hpp  procedure.cpp  procedure.hpp  statement.cpp  statement.hpp  variable.cpp  variable.hpp
